# traffic-eye

./: .gitignore  =2.4  CAMERA_DEPLOYMENT.md  CLAUDE.md  DASHBOARD_FIXES.md  DASHBOARD_UPGRADE.md  QUICK_REFERENCE.txt  README.md  WEBCAM_MIGRATION.md  pyproject.toml
config/: README.md  email_template.html  settings.yaml  violation_rules.yaml
data/: README.md
docs/: ORGANIZATION_LOG.md  README.md
dotfiles/: .gitignore  INSTALLATION.md  QUICK_START.md  README.md  SUMMARY.md  backup.sh  bootstrap.sh
models/: QUICKSTART_HELMET.md  README.md  helmet_cls_int8.tflite  helmet_model_metadata.json  yolov8n_int8.tflite
scripts/: README.md  README_E2E_TESTING.md  build_helmet_model.py  check_camera_resolution.py  check_power.sh  cleanup_old_evidence.sh  convert_float16.py  convert_model.py  deploy.sh  deploy_field_testing.sh  evaluate_helmet_model.py  export_yolov8n_tflite.py  harden.sh  health_check.sh  requirements-training.txt  retrain_and_convert.py  setup.sh  setup_autostart.sh  setup_camera.sh  setup_gcp_credentials.sh  setup_github_runner.sh  setup_gps.sh  setup_helmet_training.sh  setup_tailscale.sh  test_end_to_end.py  test_integration.py  test_live_dashboard.py  test_live_stream.sh  test_model_quick.py  test_vertex_ai.py  test_webcam.py  train_helmet.py  verify_webcam_deployment.sh
src/: README.md  config.py  main.py  models.py  platform_factory.py
systemd/: README.md  traffic-eye-dashboard.service  traffic-eye-field.service  traffic-eye-sender.service  traffic-eye-sender.timer  traffic-eye.service
tests/: README.md  conftest.py  test_config.py  (+2 more)
(+101 files in other folders)
